Stream.toList() doesn't exist in Java 11. Replace with Stream.collect(Collectors.toList())